hospital app/main/default/objects/Patient_Follow_Up__c/fields/Blood_Urea__c.field-meta.xml
<CustomField>
    <fullName>Blood_Urea__c</fullName>
    <label>Blood Urea</label>
    <length>30</length>
    <type>Text</type>
</CustomField>