hospital app/main/default/objects/Patient_Follow_Up__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <referenceTo>Consultant__c</referenceTo>
    <relationshipLabel>Patient Follow Ups</relationshipLabel>
    <relationshipName>Patient_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>