hospital app/main/default/objects/Patient_Follow_Up__c/fields/Height_cm__c.field-meta.xml
<CustomField>
    <fullName>Height_cm__c</fullName>
    <label>Height(cm)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>