hospital app/main/default/objects/Patient_Follow_Up__c/fields/Serium_Albumin__c.field-meta.xml
<CustomField>
    <fullName>Serium_Albumin__c</fullName>
    <label>Serium Albumin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>