hospital app/main/default/objects/Patient_Follow_Up__c/fields/Serum_Cholesterol__c.field-meta.xml
<CustomField>
    <fullName>Serum_Cholesterol__c</fullName>
    <label>Serum Cholesterol</label>
    <length>30</length>
    <type>Text</type>
</CustomField>