hospital app/main/default/objects/Patient_Follow_Up__c/fields/Sr_Creatine__c.field-meta.xml
<CustomField>
    <fullName>Sr_Creatine__c</fullName>
    <label>Sr. Creatine</label>
    <length>30</length>
    <type>Text</type>
</CustomField>