hospital app/main/default/objects/Patient_Follow_Up__c/fields/Urine_Protein__c.field-meta.xml
<CustomField>
    <fullName>Urine_Protein__c</fullName>
    <label>Urine Protein</label>
    <length>30</length>
    <type>Text</type>
</CustomField>