hospital app/main/default/objects/Patient_Follow_Up__c/fields/X24hr_Urine_Protien_P_C_ratio__c.field-meta.xml
<CustomField>
    <fullName>X24hr_Urine_Protien_P_C_ratio__c</fullName>
    <label>24hr Urine-Protien/P:C ratio</label>
    <length>30</length>
    <type>Text</type>
</CustomField>